Adding empty titles to avoid building pages

--- a/_posts/2025-04-01-multi-ai-feature.html
+++ b/_posts/2025-04-01-multi-ai-feature.html
@@ -101,7 +101,7 @@ Initially it leaned toward Option 2 (embed OCR in existing flow), but after I as
 </blockquote>
 
 <p>
-  You can view the refined Gemini ticket here: <a href="/assets/posts/2025-04-01-multi-ai-feature/gemini_add_ocr_refined_ticket.md" target="_blank">View the full Gemini-generated ticket (Markdown)</a>.
+  You can view the refined Gemini ticket here: <a href="/assets/posts/2025-04-01-multi-ai-feature/gemini_add_ocr_refined_ticket/" target="_blank">View the full Gemini-generated ticket (Markdown)</a>.
 </p>
 
 <hr />
@@ -153,7 +153,7 @@ focus on code quality, tech debt, securiuty vulnerabilities, etc"</strong></p>
 </blockquote>
 
 <p>Gemini came back with a bunch of solid code-level suggestions:
-  <a href="/assets/posts/2025-04-01-multi-ai-feature/gemini_code_review.md" target="_blank">Gemini's full code review for the OCR feature (Markdown)</a>
+  <a href="/assets/posts/2025-04-01-multi-ai-feature/gemini_code_review/" target="_blank">Gemini's full code review for the OCR feature (Markdown)</a>
 </p>
 
 <hr />
